fixed responsive bugs (banner overflow) [+] update banner link

--- a/css/style.css
+++ b/css/style.css
@@ -691,7 +691,7 @@ header .header_in nav ul li .btn_green span {
 .banner .banner_in {
     width: 100%;
     position: relative;
-    /*overflow: hidden;*/
+    overflow: hidden;
 }
 
 .banner .banner_in img {
